2023-08-01T00:50:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5721211519 # 3563
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-08-01
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2740 / 0 2741 / +0 +1

2023-07-31T12:16:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5714544163 # 3560
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-31
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2739 / 0 2740 / +0 +1

2023-07-30T16:09:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5707171613 # 3555
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2738 / 0 2739 / +0 +1

2023-07-29T16:08:55Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5701337876 # 3549
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-29
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2737 / 0 2738 / +0 +1

2023-07-28T16:10:15Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5693998181 # 3543
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-28
* notice: query file size: 26017
* notice: accum prev / next / diff: re vi: 0 2736 / 0 2737 / +0 +1

2023-07-27T08:10:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5678123749 # 3535